tests/res/construction/error_return_in_init.say
type A {
    init() {
        return 1; // error: Cannot return a value from a type initializer
    }
}

A();
